--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,11 +8,7 @@
 
 <body>
 
-  <% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
-    <h1 style="color: purple"><%= kindOfDay %> ToDo List </h1>
-  <% } else { %>
-    <h1 style="color: blue"><%= kindOfDay %> ToDo List </h1>
-  <% } %>
+    <h1><%= kindOfDay %></h1>
 
 </body>
 
