--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,29 +1,28 @@
 <%- include("header") -%>
 
-  <div class="box" id="heading">
-    <h1>
-      <%= listTitle %>
-    </h1>
+<div class="box" id="heading">
+  <h1>
+    <%= listTitle %>
+  </h1>
+</div>
+
+<div class="box">
+
+  <%  newListItems.forEach(function(item){ %>
+  <div class="item">
+    <input type="checkbox">
+    <p>
+      <%= item.name %>
+    </p>
   </div>
+  <%  }) %>
 
-  <div class="box">
-    <% for (let i=0; i<newListItems.length; i++) { %>
+  <form class="item" action="/" method="post">
+    <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+    <!-- add a dynamic value to the button to change between lists -->
+    <button type="submit" name="list" value=<%=listTitle %>>+</button>
+  </form>
 
-    <div class="item">
-      <input type="checkbox">
-      <p>
-        <%= newListItems[i] %>
-      </p>
-    </div>
-
-    <% } %>
-
-    <form class="item" action="/" method="post">
-      <input type="text" name="newItem" placeholder="New Item" autocomplate="off">
-<!-- add a dynamic value to the button to change between lists -->
-      <button type="submit" name="list" value=<%= listTitle %>>+</button>
-    </form>
-
-  </div>
+</div>
 
 <%- include("footer") -%>
